--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,19 +2,40 @@
   <div class="container">
     <h1>Movie Lists</h1>
     <p>Save any movie and organise them</p>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Add a new list
+    </button>
   </div>
 </div>
 
-<div class="container">
+<div class="container my-3">
   <h3>My Lists</h3>
-  <div class ="cards">
+  <div class ="cards my-3">
     <% @lists.each do |list| %>
       <%= link_to list_path(list), {style: "text-decoration:none"} do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/2510428/pexels-photo-2510428.jpeg)">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.image_url %>)">
         <%= list.name %>
         </div>
       <% end %>
     <% end %>
   </div>
-  <%= link_to "Add a new list", new_list_path, {class: "btn btn-primary"} %>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Create a new list</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for @list do |f| %>
+          <%= f.input :name %>
+          <%= f.input :image_url %>
+          <%= f.submit "Add new list", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
