--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Create a new list</h1>
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
-  <%= f.submit %>
+  <%= f.input :image_url %>
+  <%= f.submit "Add new list", class: "btn btn-primary" %>
 <% end %>
