--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/04/20/18/10/cinema-5069314_1280.jpg);">
   <div class="container">
     <h1>Movie Lists</h1>
-    <p>Save any movie and organise them</p>
+    <p>Save movies and organise them in lists</p>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Add a new list
     </button>
