--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -13,7 +13,7 @@
           <div>
             <div class="d-flex">
               <h2><%= bookmark.movie.title %></h2>
-              <h2 class="card-movie-rating">⭐<%= bookmark.movie.rating %>/10</h2>
+              <h2 class="card-movie-rating mx-1">•⭐<%= bookmark.movie.rating %>/10</h2>
             </div>
             <p><%= bookmark.movie.overview %></p>
             <div class="d-flex">
