--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -58,6 +58,14 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
 }
 
 .card-movie > img {
@@ -75,7 +83,8 @@
 .card-movie p {
   font-size: 12px;
   opacity: .7;
-  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 
@@ -83,7 +92,8 @@
   padding: 16px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
+  flex-grow: 1;
 }
 
 .movie-cards {
