--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,7 +2,7 @@
   <h1>Create a new list</h1>
   <%= simple_form_for @list do |f| %>
     <%= f.input :name %>
-    <%= f.input :image_url %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit "Add new list", class: "btn btn-primary" %>
   <% end %>
 </div>
