--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -13,9 +13,15 @@
   <div class ="cards my-3">
     <% @lists.each do |list| %>
       <%= link_to list_path(list), {style: "text-decoration:none"} do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path list.photo.key %>)">
-        <%= list.name %>
-        </div>
+        <% if list.photo.attached? %>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path list.photo.key %>)">
+          <%= list.name %>
+          </div>
+        <% else %>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path "list_background.jpg" %>)">
+          <%= list.name %>
+          </div>
+        <% end %>
       <% end %>
     <% end %>
   </div>
