--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -21,7 +21,7 @@
           <div class ="card-movie-infos-inner">
             <div class="d-flex justify-content-between">
               <h2><%= bookmark.movie.title %></h2>
-              <h2 class="card-movie-rating mx-1">⭐<%= bookmark.movie.rating %>/10</h2>
+              <h2 class="card-movie-rating mx-1">⭐<%= bookmark.movie.rating.round(1) %>/10</h2>
             </div>
             <p><%= bookmark.movie.overview %></p>
           </div>
